tests/cases/errors/parser/stmt_assert.vnm
fn main() {
  let x = 0;
  let y = 1;
  if (x < y) {
    assert "Hello, world!"
  }
  return 0;
}

main();
